--- a/ChangeLog
+++ b/ChangeLog
@@ -2,3 +2,4 @@ openvix: developer 5.0.000.021
 openvix: developer 5.0.000.022
 openvix: developer 5.0.000.023
 openvix: developer 5.0.000.024
+openvix: release 5.0.000
