--- a/ChangeLog
+++ b/ChangeLog
@@ -21,3 +21,4 @@ openvix: developer 5.0.005.001
 openvix: release 5.0.005
 openvix: developer 5.0.006.001
 openvix: release 5.0.006
+openvix: developer 5.0.007.001
