--- a/ChangeLog
+++ b/ChangeLog
@@ -22,3 +22,4 @@ openvix: release 5.0.005
 openvix: developer 5.0.006.001
 openvix: release 5.0.006
 openvix: developer 5.0.007.001
+openvix: developer 5.0.007.002
