--- a/ChangeLog
+++ b/ChangeLog
@@ -24,3 +24,4 @@ openvix: release 5.0.006
 openvix: developer 5.0.007.001
 openvix: developer 5.0.007.002
 openvix: release 5.0.007
+openvix: developer 5.0.008.001
