--- a/ChangeLog
+++ b/ChangeLog
@@ -46,3 +46,4 @@ openvix: developer 5.0.014.001
 openvix: developer 5.0.014.002
 openvix: developer 5.0.014.003
 openvix: developer 5.0.014.004
+openvix: developer 5.0.014.005
