--- a/ChangeLog
+++ b/ChangeLog
@@ -57,3 +57,4 @@ openvix: release 5.0.014
 openvix: developer 5.0.015.001
 openvix: developer 5.0.015.002
 openvix: developer 5.0.015.003
+openvix: developer 5.0.015.004
