--- a/ChangeLog
+++ b/ChangeLog
@@ -69,3 +69,4 @@ openvix: release 5.0.015
 openvix: developer 5.0.016.001
 openvix: developer 5.0.016.002
 openvix: release 5.0.016
+openvix: developer 5.0.017.001
