--- a/ChangeLog
+++ b/ChangeLog
@@ -86,3 +86,4 @@ openvix: release 5.0.018
 openvix: developer 5.0.019.001
 openvix: developer 5.0.020.001
 openvix: developer 5.0.020.002
+openvix: developer 5.0.020.003
