--- a/ChangeLog
+++ b/ChangeLog
@@ -98,3 +98,4 @@ openvix: developer 5.0.021.007
 openvix: developer 5.0.021.008
 openvix: release 5.0.021
 openvix: developer 5.0.022.001
+openvix: developer 5.0.022.002
