--- a/ChangeLog
+++ b/ChangeLog
@@ -105,3 +105,4 @@ openvix: release 5.0.023
 openvix: developer 5.0.024.001
 openvix: developer 5.0.024.002
 openvix: developer 5.0.024.003
+openvix: developer 5.0.024.004
