--- a/ChangeLog
+++ b/ChangeLog
@@ -106,3 +106,4 @@ openvix: developer 5.0.024.001
 openvix: developer 5.0.024.002
 openvix: developer 5.0.024.003
 openvix: developer 5.0.024.004
+openvix: developer 5.0.024.005
