--- a/ChangeLog
+++ b/ChangeLog
@@ -107,3 +107,4 @@ openvix: developer 5.0.024.002
 openvix: developer 5.0.024.003
 openvix: developer 5.0.024.004
 openvix: developer 5.0.024.005
+openvix: developer 5.0.024.006
