--- a/ChangeLog
+++ b/ChangeLog
@@ -108,3 +108,4 @@ openvix: developer 5.0.024.003
 openvix: developer 5.0.024.004
 openvix: developer 5.0.024.005
 openvix: developer 5.0.024.006
+openvix: developer 5.0.024.007
