--- a/ChangeLog
+++ b/ChangeLog
@@ -126,3 +126,4 @@ openvix: developer 5.0.028.001
 openvix: developer 5.0.028.002
 openvix: developer 5.0.028.003
 openvix: developer 5.0.028.004
+openvix: developer 5.0.028.005
