--- a/ChangeLog
+++ b/ChangeLog
@@ -141,3 +141,4 @@ openvix: release 5.0.028
 openvix: developer 5.0.029.001
 openvix: developer 5.0.029.002
 openvix: developer 5.0.029.003
+openvix: developer 5.0.029.004
