--- a/ChangeLog
+++ b/ChangeLog
@@ -142,3 +142,4 @@ openvix: developer 5.0.029.001
 openvix: developer 5.0.029.002
 openvix: developer 5.0.029.003
 openvix: developer 5.0.029.004
+openvix: developer 5.0.029.005
