--- a/ChangeLog
+++ b/ChangeLog
@@ -153,3 +153,4 @@ openvix: developer 5.0.031.004
 openvix: developer 5.0.031.005
 openvix: developer 5.0.031.006
 openvix: release 5.0.031
+openvix: developer 5.0.032.001
