--- a/ChangeLog
+++ b/ChangeLog
@@ -172,3 +172,4 @@ openvix: release 5.1.002
 openvix: developer 5.1.003.001
 openvix: developer 5.1.003.002
 openvix: developer 5.1.003.003
+openvix: developer 5.1.003.004
