--- a/ChangeLog
+++ b/ChangeLog
@@ -176,3 +176,4 @@ openvix: developer 5.1.003.004
 openvix: developer 5.1.003.005
 openvix: developer 5.1.003.006
 openvix: developer 5.1.003.007
+openvix: developer 5.1.003.008
