--- a/ChangeLog
+++ b/ChangeLog
@@ -181,3 +181,4 @@ openvix: release 5.1.003
 openvix: developer 5.1.004.001
 openvix: developer 5.1.004.002
 openvix: developer 5.1.004.003
+openvix: developer 5.1.004.004
