--- a/ChangeLog
+++ b/ChangeLog
@@ -192,3 +192,4 @@ openvix: developer 5.1.007.001
 openvix: developer 5.1.007.002
 openvix: developer 5.1.007.003
 openvix: developer 5.1.007.004
+openvix: developer 5.1.007.005
