--- a/ChangeLog
+++ b/ChangeLog
@@ -214,3 +214,4 @@ openvix: developer 5.1.011.009
 openvix: release 5.1.011
 openvix: developer 5.1.012.001
 openvix: developer 5.1.012.002
+openvix: developer 5.1.012.003
