--- a/ChangeLog
+++ b/ChangeLog
@@ -215,3 +215,4 @@ openvix: release 5.1.011
 openvix: developer 5.1.012.001
 openvix: developer 5.1.012.002
 openvix: developer 5.1.012.003
+openvix: developer 5.1.012.004
