--- a/ChangeLog
+++ b/ChangeLog
@@ -221,3 +221,4 @@ openvix: developer 5.1.012.006
 openvix: developer 5.1.012.007
 openvix: developer 5.1.012.008
 openvix: release 5.1.012
+openvix: developer 5.1.013.001
