--- a/ChangeLog
+++ b/ChangeLog
@@ -252,3 +252,4 @@ openvix: release 5.1.017
 openvix: developer 5.1.018.001
 openvix: release 5.1.018
 openvix: developer 5.1.019.001
+openvix: developer 5.1.019.002
