--- a/ChangeLog
+++ b/ChangeLog
@@ -258,3 +258,4 @@ openvix: release 5.1.019
 openvix: developer 5.1.020.001
 openvix: developer 5.1.020.002
 openvix: developer 5.1.020.003
+openvix: developer 5.1.020.004
