--- a/ChangeLog
+++ b/ChangeLog
@@ -298,3 +298,4 @@ openvix: developer 5.1.025.007
 openvix: developer 5.1.025.008
 openvix: developer 5.1.025.009
 openvix: developer 5.1.025.010
+openvix: developer 5.1.025.011
