--- a/ChangeLog
+++ b/ChangeLog
@@ -307,3 +307,4 @@ openvix: developer 5.1.026.004
 openvix: developer 5.1.026.005
 openvix: developer 5.1.026.006
 openvix: release 5.1.026
+openvix: developer 5.1.027.001
