--- a/ChangeLog
+++ b/ChangeLog
@@ -311,3 +311,4 @@ openvix: developer 5.1.027.001
 openvix: developer 5.1.027.002
 openvix: developer 5.1.027.003
 openvix: developer 5.1.027.004
+openvix: developer 5.1.027.005
