--- a/ChangeLog
+++ b/ChangeLog
@@ -335,3 +335,4 @@ openvix: release 5.1.028
 openvix: developer 5.1.029.001
 openvix: developer 5.1.029.002
 openvix: developer 5.1.029.003
+openvix: developer 5.1.029.004
