--- a/ChangeLog
+++ b/ChangeLog
@@ -336,3 +336,4 @@ openvix: developer 5.1.029.001
 openvix: developer 5.1.029.002
 openvix: developer 5.1.029.003
 openvix: developer 5.1.029.004
+openvix: developer 5.1.029.005
