--- a/ChangeLog
+++ b/ChangeLog
@@ -358,3 +358,4 @@ openvix: release 5.1.032
 openvix: developer 5.1.033.001
 openvix: developer 5.1.033.002
 openvix: developer 5.1.033.003
+openvix: developer 5.1.033.004
