--- a/ChangeLog
+++ b/ChangeLog
@@ -381,3 +381,4 @@ openvix: release 5.1.033
 openvix: developer 5.2.000.001
 openvix: developer 5.2.000.002
 openvix: developer 5.2.000.003
+openvix: developer 5.2.000.004
