--- a/ChangeLog
+++ b/ChangeLog
@@ -382,3 +382,4 @@ openvix: developer 5.2.000.001
 openvix: developer 5.2.000.002
 openvix: developer 5.2.000.003
 openvix: developer 5.2.000.004
+openvix: developer 5.2.000.005
