--- a/ChangeLog
+++ b/ChangeLog
@@ -429,3 +429,4 @@ openvix: developer 5.2.007.007
 openvix: developer 5.2.007.008
 openvix: release 5.2.007
 openvix: developer 5.2.008.001
+openvix: developer 5.2.009.001
