--- a/ChangeLog
+++ b/ChangeLog
@@ -448,3 +448,4 @@ openvix: developer 5.2.014.002
 openvix: developer 5.2.014.003
 openvix: developer 5.2.014.004
 openvix: developer 5.2.014.005
+openvix: developer 5.2.014.006
