--- a/ChangeLog
+++ b/ChangeLog
@@ -475,3 +475,4 @@ openvix: developer 5.2.018.002
 openvix: developer 5.2.018.003
 openvix: developer 5.2.018.004
 openvix: release 5.2.018
+openvix: developer 5.2.019.001
