--- a/ChangeLog
+++ b/ChangeLog
@@ -521,3 +521,4 @@ openvix: developer 5.2.026.005
 openvix: developer 5.2.026.006
 openvix: developer 5.2.026.007
 openvix: developer 5.2.026.008
+openvix: developer 5.2.026.009
