--- a/ChangeLog
+++ b/ChangeLog
@@ -542,3 +542,4 @@ openvix: release 5.2.029
 openvix: developer 5.2.030.001
 openvix: developer 5.2.030.002
 openvix: developer 5.2.030.003
+openvix: developer 5.2.030.004
