--- a/ChangeLog
+++ b/ChangeLog
@@ -545,3 +545,4 @@ openvix: developer 5.2.030.003
 openvix: developer 5.2.030.004
 openvix: release 5.2.030
 openvix: developer 5.2.031.001
+openvix: developer 5.2.031.002
