--- a/ChangeLog
+++ b/ChangeLog
@@ -552,3 +552,4 @@ openvix: developer 5.2.031.005
 openvix: developer 5.2.031.006
 openvix: developer 5.2.031.007
 openvix: release 5.2.031
+openvix: developer 5.2.032.001
