--- a/ChangeLog
+++ b/ChangeLog
@@ -555,3 +555,4 @@ openvix: release 5.2.031
 openvix: developer 5.2.032.001
 openvix: developer 5.2.032.002
 openvix: release 5.2.032
+openvix: developer 5.2.033.001
