--- a/ChangeLog
+++ b/ChangeLog
@@ -556,3 +556,4 @@ openvix: developer 5.2.032.001
 openvix: developer 5.2.032.002
 openvix: release 5.2.032
 openvix: developer 5.2.033.001
+openvix: developer 5.2.033.002
