--- a/ChangeLog
+++ b/ChangeLog
@@ -563,3 +563,4 @@ openvix: release 5.2.033
 openvix: developer 5.2.034.001
 openvix: release 5.2.034
 openvix: developer 5.2.035.001
+openvix: developer 5.2.035.002
