--- a/ChangeLog
+++ b/ChangeLog
@@ -589,3 +589,4 @@ openvix: developer 5.2.040.001
 openvix: developer 5.2.040.002
 openvix: developer 5.2.040.003
 openvix: developer 5.2.040.004
+openvix: developer 5.2.040.005
