--- a/ChangeLog
+++ b/ChangeLog
@@ -593,3 +593,4 @@ openvix: developer 5.2.040.005
 openvix: release 5.2.040
 openvix: developer 5.2.041.001
 openvix: developer 5.2.041.002
+openvix: developer 5.2.041.003
