--- a/ChangeLog
+++ b/ChangeLog
@@ -594,3 +594,4 @@ openvix: release 5.2.040
 openvix: developer 5.2.041.001
 openvix: developer 5.2.041.002
 openvix: developer 5.2.041.003
+openvix: developer 5.2.041.004
