--- a/ChangeLog
+++ b/ChangeLog
@@ -601,3 +601,4 @@ openvix: developer 5.2.041.007
 openvix: developer 5.2.041.008
 openvix: developer 5.2.041.009
 openvix: developer 5.2.041.010
+openvix: developer 5.2.041.011
