--- a/ChangeLog
+++ b/ChangeLog
@@ -606,3 +606,4 @@ openvix: developer 5.2.041.012
 openvix: developer 5.2.041.013
 openvix: developer 5.2.041.014
 openvix: release 5.2.041
+openvix: developer 5.2.042.001
