--- a/ChangeLog
+++ b/ChangeLog
@@ -616,3 +616,4 @@ openvix: release 5.2.042
 openvix: developer 5.2.043.001
 openvix: developer 5.2.043.002
 openvix: developer 5.2.043.003
+openvix: developer 5.2.043.004
