--- a/ChangeLog
+++ b/ChangeLog
@@ -620,3 +620,4 @@ openvix: developer 5.2.043.004
 openvix: developer 5.2.043.005
 openvix: developer 5.2.043.006
 openvix: developer 5.2.043.007
+openvix: release 5.2.043
