--- a/ChangeLog
+++ b/ChangeLog
@@ -661,3 +661,4 @@ openvix: developer 5.3.002.001
 openvix: developer 5.3.002.002
 openvix: developer 5.3.002.003
 openvix: developer 5.3.002.004
+openvix: developer 5.3.002.005
