--- a/ChangeLog
+++ b/ChangeLog
@@ -672,3 +672,4 @@ openvix: developer 5.3.003.001
 openvix: developer 5.3.003.002
 openvix: developer 5.3.003.003
 openvix: developer 5.3.003.004
+openvix: developer 5.3.003.005
