--- a/ChangeLog
+++ b/ChangeLog
@@ -718,3 +718,4 @@ openvix: developer 5.3.013.001
 openvix: release 5.3.013
 openvix: developer 5.3.014.001
 openvix: developer 5.3.014.002
+openvix: developer 5.3.014.003
