--- a/ChangeLog
+++ b/ChangeLog
@@ -719,3 +719,4 @@ openvix: release 5.3.013
 openvix: developer 5.3.014.001
 openvix: developer 5.3.014.002
 openvix: developer 5.3.014.003
+openvix: developer 5.3.014.004
