--- a/ChangeLog
+++ b/ChangeLog
@@ -733,3 +733,4 @@ openvix: developer 5.3.014.014
 openvix: developer 5.3.014.015
 openvix: release 5.3.014
 openvix: developer 5.3.015.001
+openvix: developer 5.3.015.002
