--- a/ChangeLog
+++ b/ChangeLog
@@ -737,3 +737,4 @@ openvix: developer 5.3.015.002
 openvix: developer 5.3.015.003
 openvix: developer 5.3.015.004
 openvix: release 5.3.015
+openvix: developer 5.3.016.001
