--- a/ChangeLog
+++ b/ChangeLog
@@ -738,3 +738,4 @@ openvix: developer 5.3.015.003
 openvix: developer 5.3.015.004
 openvix: release 5.3.015
 openvix: developer 5.3.016.001
+openvix: developer 5.3.016.002
