--- a/ChangeLog
+++ b/ChangeLog
@@ -739,3 +739,4 @@ openvix: developer 5.3.015.004
 openvix: release 5.3.015
 openvix: developer 5.3.016.001
 openvix: developer 5.3.016.002
+openvix: developer 5.3.016.003
