--- a/ChangeLog
+++ b/ChangeLog
@@ -740,3 +740,4 @@ openvix: release 5.3.015
 openvix: developer 5.3.016.001
 openvix: developer 5.3.016.002
 openvix: developer 5.3.016.003
+openvix: developer 5.3.016.004
