--- a/ChangeLog
+++ b/ChangeLog
@@ -790,3 +790,4 @@ openvix: developer 5.3.024.004
 openvix: developer 5.3.024.005
 openvix: developer 5.3.024.006
 openvix: release 5.3.024
+openvix: developer 5.3.025.001
