--- a/ChangeLog
+++ b/ChangeLog
@@ -828,3 +828,4 @@ openvix: developer 5.3.035.002
 openvix: developer 5.3.035.003
 openvix: developer 5.3.035.004
 openvix: release 5.3.035
+openvix: developer 5.3.036.001
