--- a/ChangeLog
+++ b/ChangeLog
@@ -845,3 +845,4 @@ openvix: release 5.3.039
 openvix: developer 5.4.000.001
 openvix: developer 5.4.000.002
 openvix: developer 5.4.000.003
+openvix: developer 5.4.000.004
