--- a/ChangeLog
+++ b/ChangeLog
@@ -850,3 +850,4 @@ openvix: developer 5.4.000.005
 openvix: developer 5.4.000.006
 openvix: release 5.4.000
 openvix: developer 5.4.001.001
+openvix: developer 5.4.001.002
