--- a/ChangeLog
+++ b/ChangeLog
@@ -852,3 +852,4 @@ openvix: release 5.4.000
 openvix: developer 5.4.001.001
 openvix: developer 5.4.001.002
 openvix: developer 5.4.001.003
+openvix: developer 5.4.001.004
