--- a/ChangeLog
+++ b/ChangeLog
@@ -875,3 +875,4 @@ openvix: developer 5.4.001.023
 openvix: developer 5.4.001.024
 openvix: developer 5.4.001.025
 openvix: developer 5.4.001.026
+openvix: developer 5.4.001.027
