--- a/ChangeLog
+++ b/ChangeLog
@@ -912,3 +912,4 @@ openvix: release 5.4.002
 openvix: developer 5.4.003.001
 openvix: developer 5.4.003.002
 openvix: developer 5.4.003.003
+openvix: developer 5.4.003.004
