--- a/ChangeLog
+++ b/ChangeLog
@@ -913,3 +913,4 @@ openvix: developer 5.4.003.001
 openvix: developer 5.4.003.002
 openvix: developer 5.4.003.003
 openvix: developer 5.4.003.004
+openvix: release 5.4.003
