--- a/ChangeLog
+++ b/ChangeLog
@@ -953,3 +953,4 @@ openvix: release 5.4.004
 openvix: developer 5.4.005.001
 openvix: developer 5.4.005.002
 openvix: developer 5.4.005.003
+openvix: developer 5.4.005.004
