--- a/ChangeLog
+++ b/ChangeLog
@@ -964,3 +964,4 @@ openvix: developer 5.4.005.011
 openvix: developer 5.4.005.012
 openvix: release 5.4.005
 openvix: developer 5.4.006.001
+openvix: developer 5.4.006.002
