--- a/ChangeLog
+++ b/ChangeLog
@@ -965,3 +965,4 @@ openvix: developer 5.4.005.012
 openvix: release 5.4.005
 openvix: developer 5.4.006.001
 openvix: developer 5.4.006.002
+openvix: developer 5.4.006.003
