--- a/ChangeLog
+++ b/ChangeLog
@@ -966,3 +966,4 @@ openvix: release 5.4.005
 openvix: developer 5.4.006.001
 openvix: developer 5.4.006.002
 openvix: developer 5.4.006.003
+openvix: developer 5.4.006.004
