--- a/ChangeLog
+++ b/ChangeLog
@@ -967,3 +967,4 @@ openvix: developer 5.4.006.001
 openvix: developer 5.4.006.002
 openvix: developer 5.4.006.003
 openvix: developer 5.4.006.004
+openvix: developer 5.4.006.005
