--- a/ChangeLog
+++ b/ChangeLog
@@ -968,3 +968,4 @@ openvix: developer 5.4.006.002
 openvix: developer 5.4.006.003
 openvix: developer 5.4.006.004
 openvix: developer 5.4.006.005
+openvix: developer 5.4.006.006
