--- a/ChangeLog
+++ b/ChangeLog
@@ -975,3 +975,4 @@ openvix: developer 5.4.006.009
 openvix: developer 5.4.006.010
 openvix: developer 5.4.006.011
 openvix: developer 5.4.006.012
+openvix: developer 5.4.006.013
