--- a/ChangeLog
+++ b/ChangeLog
@@ -996,3 +996,4 @@ openvix: release 5.4.007
 openvix: developer 5.4.008.001
 openvix: developer 5.4.008.002
 openvix: developer 5.4.008.003
+openvix: developer 5.4.008.004
