--- a/ChangeLog
+++ b/ChangeLog
@@ -1001,3 +1001,4 @@ openvix: developer 5.4.008.005
 openvix: developer 5.4.008.006
 openvix: developer 5.4.008.007
 openvix: developer 5.4.008.008
+openvix: developer 5.4.008.009
