--- a/ChangeLog
+++ b/ChangeLog
@@ -1004,3 +1004,4 @@ openvix: developer 5.4.008.008
 openvix: developer 5.4.008.009
 openvix: release 5.4.008
 openvix: developer 5.4.009.001
+openvix: developer 5.4.009.002
