--- a/ChangeLog
+++ b/ChangeLog
@@ -1005,3 +1005,4 @@ openvix: developer 5.4.008.009
 openvix: release 5.4.008
 openvix: developer 5.4.009.001
 openvix: developer 5.4.009.002
+openvix: developer 5.4.009.003
