--- a/ChangeLog
+++ b/ChangeLog
@@ -1006,3 +1006,4 @@ openvix: release 5.4.008
 openvix: developer 5.4.009.001
 openvix: developer 5.4.009.002
 openvix: developer 5.4.009.003
+openvix: developer 5.4.009.004
