--- a/ChangeLog
+++ b/ChangeLog
@@ -1007,3 +1007,4 @@ openvix: developer 5.4.009.001
 openvix: developer 5.4.009.002
 openvix: developer 5.4.009.003
 openvix: developer 5.4.009.004
+openvix: developer 5.4.009.005
