--- a/ChangeLog
+++ b/ChangeLog
@@ -1008,3 +1008,4 @@ openvix: developer 5.4.009.002
 openvix: developer 5.4.009.003
 openvix: developer 5.4.009.004
 openvix: developer 5.4.009.005
+openvix: developer 5.4.009.006
