--- a/ChangeLog
+++ b/ChangeLog
@@ -1014,3 +1014,4 @@ openvix: developer 5.4.009.008
 openvix: developer 5.4.009.009
 openvix: developer 5.4.009.010
 openvix: developer 5.4.009.011
+openvix: release 5.4.009
