--- a/ChangeLog
+++ b/ChangeLog
@@ -1015,3 +1015,4 @@ openvix: developer 5.4.009.009
 openvix: developer 5.4.009.010
 openvix: developer 5.4.009.011
 openvix: release 5.4.009
+openvix: developer 5.4.010.001
