--- a/ChangeLog
+++ b/ChangeLog
@@ -1017,3 +1017,4 @@ openvix: developer 5.4.009.011
 openvix: release 5.4.009
 openvix: developer 5.4.010.001
 openvix: developer 5.4.010.002
+openvix: developer 5.4.010.003
