--- a/ChangeLog
+++ b/ChangeLog
@@ -1021,3 +1021,4 @@ openvix: developer 5.4.010.003
 openvix: developer 5.4.010.004
 openvix: developer 5.4.010.005
 openvix: developer 5.4.010.006
+openvix: developer 5.4.010.007
