--- a/ChangeLog
+++ b/ChangeLog
@@ -1022,3 +1022,4 @@ openvix: developer 5.4.010.004
 openvix: developer 5.4.010.005
 openvix: developer 5.4.010.006
 openvix: developer 5.4.010.007
+openvix: developer 5.4.010.008
