--- a/ChangeLog
+++ b/ChangeLog
@@ -1026,3 +1026,4 @@ openvix: developer 5.4.010.008
 openvix: developer 5.4.010.009
 openvix: developer 5.4.010.010
 openvix: developer 5.4.010.011
+openvix: developer 5.4.010.012
