--- a/ChangeLog
+++ b/ChangeLog
@@ -1027,3 +1027,4 @@ openvix: developer 5.4.010.009
 openvix: developer 5.4.010.010
 openvix: developer 5.4.010.011
 openvix: developer 5.4.010.012
+openvix: developer 5.4.010.013
