--- a/ChangeLog
+++ b/ChangeLog
@@ -1030,3 +1030,4 @@ openvix: developer 5.4.010.012
 openvix: developer 5.4.010.013
 openvix: developer 5.4.010.014
 openvix: developer 5.4.010.015
+openvix: developer 5.4.010.016
