--- a/ChangeLog
+++ b/ChangeLog
@@ -1031,3 +1031,4 @@ openvix: developer 5.4.010.013
 openvix: developer 5.4.010.014
 openvix: developer 5.4.010.015
 openvix: developer 5.4.010.016
+openvix: developer 5.4.010.017
