--- a/ChangeLog
+++ b/ChangeLog
@@ -1035,3 +1035,4 @@ openvix: developer 5.4.010.017
 openvix: release 5.4.010
 openvix: developer 5.4.011.001
 openvix: release 5.4.011
+openvix: developer 5.4.012.001
