--- a/ChangeLog
+++ b/ChangeLog
@@ -1037,3 +1037,4 @@ openvix: developer 5.4.011.001
 openvix: release 5.4.011
 openvix: developer 5.4.012.001
 openvix: release 5.4.012
+openvix: developer 5.4.013.001
