--- a/ChangeLog
+++ b/ChangeLog
@@ -1039,3 +1039,4 @@ openvix: developer 5.4.012.001
 openvix: release 5.4.012
 openvix: developer 5.4.013.001
 openvix: developer 5.4.013.002
+openvix: developer 5.4.013.003
