--- a/ChangeLog
+++ b/ChangeLog
@@ -1040,3 +1040,4 @@ openvix: release 5.4.012
 openvix: developer 5.4.013.001
 openvix: developer 5.4.013.002
 openvix: developer 5.4.013.003
+openvix: developer 5.4.013.004
