--- a/ChangeLog
+++ b/ChangeLog
@@ -1042,3 +1042,4 @@ openvix: developer 5.4.013.002
 openvix: developer 5.4.013.003
 openvix: developer 5.4.013.004
 openvix: developer 5.4.013.005
+openvix: developer 5.4.013.006
