--- a/ChangeLog
+++ b/ChangeLog
@@ -1043,3 +1043,4 @@ openvix: developer 5.4.013.003
 openvix: developer 5.4.013.004
 openvix: developer 5.4.013.005
 openvix: developer 5.4.013.006
+openvix: developer 5.4.013.007
