--- a/ChangeLog
+++ b/ChangeLog
@@ -1046,3 +1046,4 @@ openvix: developer 5.4.013.006
 openvix: developer 5.4.013.007
 openvix: developer 5.4.013.008
 openvix: developer 5.4.013.009
+openvix: developer 5.4.013.010
