--- a/ChangeLog
+++ b/ChangeLog
@@ -1047,3 +1047,4 @@ openvix: developer 5.4.013.007
 openvix: developer 5.4.013.008
 openvix: developer 5.4.013.009
 openvix: developer 5.4.013.010
+openvix: developer 5.4.013.011
