--- a/ChangeLog
+++ b/ChangeLog
@@ -1052,3 +1052,4 @@ openvix: developer 5.4.013.012
 openvix: developer 5.4.013.013
 openvix: developer 5.4.013.014
 openvix: developer 5.4.013.015
+openvix: developer 5.4.013.016
