--- a/ChangeLog
+++ b/ChangeLog
@@ -1053,3 +1053,4 @@ openvix: developer 5.4.013.013
 openvix: developer 5.4.013.014
 openvix: developer 5.4.013.015
 openvix: developer 5.4.013.016
+openvix: release 5.4.013
