--- a/ChangeLog
+++ b/ChangeLog
@@ -1054,3 +1054,4 @@ openvix: developer 5.4.013.014
 openvix: developer 5.4.013.015
 openvix: developer 5.4.013.016
 openvix: release 5.4.013
+openvix: developer 5.4.014.001
