--- a/ChangeLog
+++ b/ChangeLog
@@ -1055,3 +1055,4 @@ openvix: developer 5.4.013.015
 openvix: developer 5.4.013.016
 openvix: release 5.4.013
 openvix: developer 5.4.014.001
+openvix: developer 5.4.014.002
