--- a/ChangeLog
+++ b/ChangeLog
@@ -1059,3 +1059,4 @@ openvix: developer 5.4.014.002
 openvix: developer 5.4.014.003
 openvix: developer 5.4.014.004
 openvix: developer 5.4.014.005
+openvix: developer 5.4.014.006
