--- a/ChangeLog
+++ b/ChangeLog
@@ -1060,3 +1060,4 @@ openvix: developer 5.4.014.003
 openvix: developer 5.4.014.004
 openvix: developer 5.4.014.005
 openvix: developer 5.4.014.006
+openvix: developer 5.4.014.007
