--- a/ChangeLog
+++ b/ChangeLog
@@ -1062,3 +1062,4 @@ openvix: developer 5.4.014.005
 openvix: developer 5.4.014.006
 openvix: developer 5.4.014.007
 openvix: developer 5.4.014.008
+openvix: developer 5.4.014.009
