--- a/ChangeLog
+++ b/ChangeLog
@@ -1067,3 +1067,4 @@ openvix: developer 5.4.014.010
 openvix: developer 5.4.014.011
 openvix: developer 5.4.014.012
 openvix: developer 5.4.014.013
+openvix: developer 5.4.014.014
