--- a/ChangeLog
+++ b/ChangeLog
@@ -1068,3 +1068,4 @@ openvix: developer 5.4.014.011
 openvix: developer 5.4.014.012
 openvix: developer 5.4.014.013
 openvix: developer 5.4.014.014
+openvix: developer 5.4.014.015
