--- a/ChangeLog
+++ b/ChangeLog
@@ -1069,3 +1069,4 @@ openvix: developer 5.4.014.012
 openvix: developer 5.4.014.013
 openvix: developer 5.4.014.014
 openvix: developer 5.4.014.015
+openvix: release 5.4.014
