--- a/ChangeLog
+++ b/ChangeLog
@@ -1071,3 +1071,4 @@ openvix: developer 5.4.014.014
 openvix: developer 5.4.014.015
 openvix: release 5.4.014
 openvix: developer 5.4.015.001
+openvix: developer 5.4.015.002
