--- a/ChangeLog
+++ b/ChangeLog
@@ -1072,3 +1072,4 @@ openvix: developer 5.4.014.015
 openvix: release 5.4.014
 openvix: developer 5.4.015.001
 openvix: developer 5.4.015.002
+openvix: developer 5.4.015.003
