--- a/ChangeLog
+++ b/ChangeLog
@@ -1073,3 +1073,4 @@ openvix: release 5.4.014
 openvix: developer 5.4.015.001
 openvix: developer 5.4.015.002
 openvix: developer 5.4.015.003
+openvix: developer 5.4.015.004
