--- a/ChangeLog
+++ b/ChangeLog
@@ -1079,3 +1079,4 @@ openvix: developer 5.4.015.006
 openvix: release 5.4.015
 openvix: developer 5.4.016.001
 openvix: release 5.4.016
+openvix: developer 5.4.017.001
