--- a/ChangeLog
+++ b/ChangeLog
@@ -1080,3 +1080,4 @@ openvix: release 5.4.015
 openvix: developer 5.4.016.001
 openvix: release 5.4.016
 openvix: developer 5.4.017.001
+openvix: developer 5.4.017.002
