--- a/ChangeLog
+++ b/ChangeLog
@@ -1084,3 +1084,4 @@ openvix: developer 5.4.017.002
 openvix: developer 6.0.001.001
 openvix: release 6.0.001
 openvix: developer 6.0.002.002
+openvix: release 6.0.002
