--- a/ChangeLog
+++ b/ChangeLog
@@ -1085,3 +1085,4 @@ openvix: developer 6.0.001.001
 openvix: release 6.0.001
 openvix: developer 6.0.002.002
 openvix: release 6.0.002
+openvix: developer 6.0.003.001
