--- a/ChangeLog
+++ b/ChangeLog
@@ -1086,3 +1086,4 @@ openvix: release 6.0.001
 openvix: developer 6.0.002.002
 openvix: release 6.0.002
 openvix: developer 6.0.003.001
+openvix: developer 6.0.003.002
