--- a/ChangeLog
+++ b/ChangeLog
@@ -1087,3 +1087,4 @@ openvix: developer 6.0.002.002
 openvix: release 6.0.002
 openvix: developer 6.0.003.001
 openvix: developer 6.0.003.002
+openvix: developer 6.0.003.003
