--- a/ChangeLog
+++ b/ChangeLog
@@ -1088,3 +1088,4 @@ openvix: release 6.0.002
 openvix: developer 6.0.003.001
 openvix: developer 6.0.003.002
 openvix: developer 6.0.003.003
+openvix: release 6.0.003
