--- a/ChangeLog
+++ b/ChangeLog
@@ -1089,3 +1089,4 @@ openvix: developer 6.0.003.001
 openvix: developer 6.0.003.002
 openvix: developer 6.0.003.003
 openvix: release 6.0.003
+openvix: developer 6.0.004.001
