--- a/ChangeLog
+++ b/ChangeLog
@@ -1091,3 +1091,4 @@ openvix: developer 6.0.003.003
 openvix: release 6.0.003
 openvix: developer 6.0.004.001
 openvix: developer 6.0.004.002
+openvix: developer 6.0.004.003
