--- a/ChangeLog
+++ b/ChangeLog
@@ -1094,3 +1094,4 @@ openvix: developer 6.0.004.002
 openvix: developer 6.0.004.003
 openvix: developer 6.0.004.004
 openvix: developer 6.0.004.005
+openvix: developer 6.0.004.006
