--- a/ChangeLog
+++ b/ChangeLog
@@ -1095,3 +1095,4 @@ openvix: developer 6.0.004.003
 openvix: developer 6.0.004.004
 openvix: developer 6.0.004.005
 openvix: developer 6.0.004.006
+openvix: developer 6.0.004.007
