--- a/ChangeLog
+++ b/ChangeLog
@@ -1096,3 +1096,4 @@ openvix: developer 6.0.004.004
 openvix: developer 6.0.004.005
 openvix: developer 6.0.004.006
 openvix: developer 6.0.004.007
+openvix: developer 6.0.004.008
