--- a/ChangeLog
+++ b/ChangeLog
@@ -1097,3 +1097,4 @@ openvix: developer 6.0.004.005
 openvix: developer 6.0.004.006
 openvix: developer 6.0.004.007
 openvix: developer 6.0.004.008
+openvix: developer 6.0.004.009
