--- a/ChangeLog
+++ b/ChangeLog
@@ -1106,3 +1106,4 @@ openvix: developer 6.0.005.002
 openvix: developer 6.0.005.003
 openvix: developer 6.0.005.004
 openvix: developer 6.0.006.001
+openvix: release 6.0.006
