--- a/ChangeLog
+++ b/ChangeLog
@@ -1111,3 +1111,4 @@ openvix: developer 6.0.007.001
 openvix: developer 6.0.007.002
 openvix: developer 6.0.007.003
 openvix: release 6.0.007
+openvix: developer 6.0.008.001
