--- a/ChangeLog
+++ b/ChangeLog
@@ -1114,3 +1114,4 @@ openvix: release 6.0.007
 openvix: developer 6.0.008.001
 openvix: developer 6.0.008.002
 openvix: developer 6.0.008.003
+openvix: developer 6.0.008.004
