--- a/ChangeLog
+++ b/ChangeLog
@@ -1116,3 +1116,4 @@ openvix: developer 6.0.008.002
 openvix: developer 6.0.008.003
 openvix: developer 6.0.008.004
 openvix: developer 6.0.008.005
+openvix: developer 6.0.008.006
