--- a/ChangeLog
+++ b/ChangeLog
@@ -1117,3 +1117,4 @@ openvix: developer 6.0.008.003
 openvix: developer 6.0.008.004
 openvix: developer 6.0.008.005
 openvix: developer 6.0.008.006
+openvix: release 6.0.008
