--- a/ChangeLog
+++ b/ChangeLog
@@ -1118,3 +1118,4 @@ openvix: developer 6.0.008.004
 openvix: developer 6.0.008.005
 openvix: developer 6.0.008.006
 openvix: release 6.0.008
+openvix: developer 6.0.009.001
