--- a/ChangeLog
+++ b/ChangeLog
@@ -1121,3 +1121,4 @@ openvix: release 6.0.008
 openvix: developer 6.0.009.001
 openvix: developer 6.0.009.002
 openvix: developer 6.1.001.001
+openvix: developer 6.1.001.002
