--- a/ChangeLog
+++ b/ChangeLog
@@ -1125,3 +1125,4 @@ openvix: developer 6.1.001.002
 openvix: developer 6.1.001.003
 openvix: developer 6.1.001.004
 openvix: developer 6.1.001.006
+openvix: developer 6.1.002.002
