--- a/ChangeLog
+++ b/ChangeLog
@@ -1435,3 +1435,4 @@ openvix: developer 6.5.003.004
 openvix: developer 6.5.003.005
 openvix: developer 6.5.003.006
 openvix: developer 6.5.003.007
+openvix: developer 6.5.003.008
