--- a/ChangeLog
+++ b/ChangeLog
@@ -1436,3 +1436,4 @@ openvix: developer 6.5.003.005
 openvix: developer 6.5.003.006
 openvix: developer 6.5.003.007
 openvix: developer 6.5.003.008
+openvix: developer 6.5.003.009
