--- a/ChangeLog
+++ b/ChangeLog
@@ -1437,3 +1437,4 @@ openvix: developer 6.5.003.006
 openvix: developer 6.5.003.007
 openvix: developer 6.5.003.008
 openvix: developer 6.5.003.009
+openvix: release 6.5.003
