--- a/ChangeLog
+++ b/ChangeLog
@@ -1438,3 +1438,4 @@ openvix: developer 6.5.003.007
 openvix: developer 6.5.003.008
 openvix: developer 6.5.003.009
 openvix: release 6.5.003
+openvix: developer 6.5.004.001
