--- a/ChangeLog
+++ b/ChangeLog
@@ -1439,3 +1439,4 @@ openvix: developer 6.5.003.008
 openvix: developer 6.5.003.009
 openvix: release 6.5.003
 openvix: developer 6.5.004.001
+openvix: developer 6.5.004.002
