--- a/ChangeLog
+++ b/ChangeLog
@@ -1440,3 +1440,4 @@ openvix: developer 6.5.003.009
 openvix: release 6.5.003
 openvix: developer 6.5.004.001
 openvix: developer 6.5.004.002
+openvix: developer 6.5.004.003
