--- a/ChangeLog
+++ b/ChangeLog
@@ -1441,3 +1441,4 @@ openvix: release 6.5.003
 openvix: developer 6.5.004.001
 openvix: developer 6.5.004.002
 openvix: developer 6.5.004.003
+openvix: developer 6.6.000.001
