--- a/ChangeLog
+++ b/ChangeLog
@@ -1447,3 +1447,4 @@ openvix: developer 6.6.000.003
 openvix: developer 6.6.000.004
 openvix: release 6.6.000
 openvix: developer 6.6.001.001
+openvix: developer 6.6.001.002
