--- a/ChangeLog
+++ b/ChangeLog
@@ -1448,3 +1448,4 @@ openvix: developer 6.6.000.004
 openvix: release 6.6.000
 openvix: developer 6.6.001.001
 openvix: developer 6.6.001.002
+openvix: developer 6.6.001.003
