--- a/ChangeLog
+++ b/ChangeLog
@@ -1449,3 +1449,4 @@ openvix: release 6.6.000
 openvix: developer 6.6.001.001
 openvix: developer 6.6.001.002
 openvix: developer 6.6.001.003
+openvix: developer 6.6.001.004
