--- a/ChangeLog
+++ b/ChangeLog
@@ -1451,3 +1451,4 @@ openvix: developer 6.6.001.002
 openvix: developer 6.6.001.003
 openvix: developer 6.6.001.004
 openvix: release 6.6.001
+openvix: developer 6.6.002.001
