--- a/ChangeLog
+++ b/ChangeLog
@@ -1452,3 +1452,4 @@ openvix: developer 6.6.001.003
 openvix: developer 6.6.001.004
 openvix: release 6.6.001
 openvix: developer 6.6.002.001
+openvix: developer 6.6.002.002
