--- a/ChangeLog
+++ b/ChangeLog
@@ -1454,3 +1454,4 @@ openvix: release 6.6.001
 openvix: developer 6.6.002.001
 openvix: developer 6.6.002.002
 openvix: developer 6.6.002.003
+openvix: developer 6.6.002.004
