--- a/ChangeLog
+++ b/ChangeLog
@@ -1456,3 +1456,4 @@ openvix: developer 6.6.002.002
 openvix: developer 6.6.002.003
 openvix: developer 6.6.002.004
 openvix: release 6.6.002
+openvix: developer 6.6.003.001
