--- a/ChangeLog
+++ b/ChangeLog
@@ -1457,3 +1457,4 @@ openvix: developer 6.6.002.003
 openvix: developer 6.6.002.004
 openvix: release 6.6.002
 openvix: developer 6.6.003.001
+openvix: developer 6.6.003.002
