--- a/ChangeLog
+++ b/ChangeLog
@@ -1458,3 +1458,4 @@ openvix: developer 6.6.002.004
 openvix: release 6.6.002
 openvix: developer 6.6.003.001
 openvix: developer 6.6.003.002
+openvix: release 6.6.003
