--- a/ChangeLog
+++ b/ChangeLog
@@ -1461,3 +1461,4 @@ openvix: developer 6.6.003.002
 openvix: release 6.6.003
 openvix: developer 6.6.004.001
 openvix: developer 6.6.004.002
+openvix: developer 6.6.004.003
