--- a/ChangeLog
+++ b/ChangeLog
@@ -1462,3 +1462,4 @@ openvix: release 6.6.003
 openvix: developer 6.6.004.001
 openvix: developer 6.6.004.002
 openvix: developer 6.6.004.003
+openvix: developer 6.6.004.004
