--- a/ChangeLog
+++ b/ChangeLog
@@ -1464,3 +1464,4 @@ openvix: developer 6.6.004.002
 openvix: developer 6.6.004.003
 openvix: developer 6.6.004.004
 openvix: developer 6.6.004.005
+openvix: developer 6.6.004.006
