--- a/ChangeLog
+++ b/ChangeLog
@@ -1465,3 +1465,4 @@ openvix: developer 6.6.004.003
 openvix: developer 6.6.004.004
 openvix: developer 6.6.004.005
 openvix: developer 6.6.004.006
+openvix: developer 6.6.004.007
