--- a/ChangeLog
+++ b/ChangeLog
@@ -1466,3 +1466,4 @@ openvix: developer 6.6.004.004
 openvix: developer 6.6.004.005
 openvix: developer 6.6.004.006
 openvix: developer 6.6.004.007
+openvix: developer 6.6.004.008
