--- a/ChangeLog
+++ b/ChangeLog
@@ -1468,3 +1468,4 @@ openvix: developer 6.6.004.006
 openvix: developer 6.6.004.007
 openvix: developer 6.6.004.008
 openvix: developer 6.6.004.009
+openvix: developer 6.6.004.010
