--- a/ChangeLog
+++ b/ChangeLog
@@ -1469,3 +1469,4 @@ openvix: developer 6.6.004.007
 openvix: developer 6.6.004.008
 openvix: developer 6.6.004.009
 openvix: developer 6.6.004.010
+openvix: developer 6.6.004.011
