--- a/ChangeLog
+++ b/ChangeLog
@@ -1472,3 +1472,4 @@ openvix: developer 6.6.004.010
 openvix: developer 6.6.004.011
 openvix: developer 6.6.004.012
 openvix: developer 6.6.004.013
+openvix: release 6.6.004
