--- a/ChangeLog
+++ b/ChangeLog
@@ -1473,3 +1473,4 @@ openvix: developer 6.6.004.011
 openvix: developer 6.6.004.012
 openvix: developer 6.6.004.013
 openvix: release 6.6.004
+openvix: developer 6.6.004.014
