--- a/ChangeLog
+++ b/ChangeLog
@@ -1474,3 +1474,4 @@ openvix: developer 6.6.004.012
 openvix: developer 6.6.004.013
 openvix: release 6.6.004
 openvix: developer 6.6.004.014
+openvix: developer 6.6.005.001
