--- a/ChangeLog
+++ b/ChangeLog
@@ -1475,3 +1475,4 @@ openvix: developer 6.6.004.013
 openvix: release 6.6.004
 openvix: developer 6.6.004.014
 openvix: developer 6.6.005.001
+openvix: developer 6.6.005.002
