--- a/ChangeLog
+++ b/ChangeLog
@@ -1476,3 +1476,4 @@ openvix: release 6.6.004
 openvix: developer 6.6.004.014
 openvix: developer 6.6.005.001
 openvix: developer 6.6.005.002
+openvix: developer 6.6.005.003
