--- a/ChangeLog
+++ b/ChangeLog
@@ -1478,3 +1478,4 @@ openvix: developer 6.6.005.001
 openvix: developer 6.6.005.002
 openvix: developer 6.6.005.003
 openvix: release 6.6.005
+openvix: developer 6.6.006.001
