--- a/ChangeLog
+++ b/ChangeLog
@@ -1481,3 +1481,4 @@ openvix: release 6.6.005
 openvix: developer 6.6.006.001
 openvix: developer 6.6.006.002
 openvix: developer 6.6.006.003
+openvix: developer 6.6.006.004
