--- a/ChangeLog
+++ b/ChangeLog
@@ -1482,3 +1482,4 @@ openvix: developer 6.6.006.001
 openvix: developer 6.6.006.002
 openvix: developer 6.6.006.003
 openvix: developer 6.6.006.004
+openvix: developer 6.6.006.005
