--- a/ChangeLog
+++ b/ChangeLog
@@ -1483,3 +1483,4 @@ openvix: developer 6.6.006.002
 openvix: developer 6.6.006.003
 openvix: developer 6.6.006.004
 openvix: developer 6.6.006.005
+openvix: developer 6.6.006.006
