--- a/ChangeLog
+++ b/ChangeLog
@@ -1484,3 +1484,4 @@ openvix: developer 6.6.006.003
 openvix: developer 6.6.006.004
 openvix: developer 6.6.006.005
 openvix: developer 6.6.006.006
+openvix: release 6.6.006
