--- a/ChangeLog
+++ b/ChangeLog
@@ -1485,3 +1485,4 @@ openvix: developer 6.6.006.004
 openvix: developer 6.6.006.005
 openvix: developer 6.6.006.006
 openvix: release 6.6.006
+openvix: developer 6.6.007.001
