--- a/ChangeLog
+++ b/ChangeLog
@@ -1486,3 +1486,4 @@ openvix: developer 6.6.006.005
 openvix: developer 6.6.006.006
 openvix: release 6.6.006
 openvix: developer 6.6.007.001
+openvix: developer 6.6.007.002
