--- a/ChangeLog
+++ b/ChangeLog
@@ -1487,3 +1487,4 @@ openvix: developer 6.6.006.006
 openvix: release 6.6.006
 openvix: developer 6.6.007.001
 openvix: developer 6.6.007.002
+openvix: developer 6.6.007.003
