--- a/ChangeLog
+++ b/ChangeLog
@@ -1488,3 +1488,4 @@ openvix: release 6.6.006
 openvix: developer 6.6.007.001
 openvix: developer 6.6.007.002
 openvix: developer 6.6.007.003
+openvix: developer 6.6.007.004
