--- a/ChangeLog
+++ b/ChangeLog
@@ -1489,3 +1489,4 @@ openvix: developer 6.6.007.001
 openvix: developer 6.6.007.002
 openvix: developer 6.6.007.003
 openvix: developer 6.6.007.004
+openvix: developer 6.6.007.005
