--- a/ChangeLog
+++ b/ChangeLog
@@ -1491,3 +1491,4 @@ openvix: developer 6.6.007.003
 openvix: developer 6.6.007.004
 openvix: developer 6.6.007.005
 openvix: developer 6.6.007.006
+openvix: developer 6.6.007.007
