--- a/ChangeLog
+++ b/ChangeLog
@@ -1492,3 +1492,4 @@ openvix: developer 6.6.007.004
 openvix: developer 6.6.007.005
 openvix: developer 6.6.007.006
 openvix: developer 6.6.007.007
+openvix: developer 6.6.007.008
