--- a/ChangeLog
+++ b/ChangeLog
@@ -1494,3 +1494,4 @@ openvix: developer 6.6.007.006
 openvix: developer 6.6.007.007
 openvix: developer 6.6.007.008
 openvix: developer 6.6.007.009
+openvix: release 6.6.007
