--- a/ChangeLog
+++ b/ChangeLog
@@ -1495,3 +1495,4 @@ openvix: developer 6.6.007.007
 openvix: developer 6.6.007.008
 openvix: developer 6.6.007.009
 openvix: release 6.6.007
+openvix: developer 6.6.007.010
