--- a/ChangeLog
+++ b/ChangeLog
@@ -1496,3 +1496,4 @@ openvix: developer 6.6.007.008
 openvix: developer 6.6.007.009
 openvix: release 6.6.007
 openvix: developer 6.6.007.010
+openvix: developer 6.6.007.011
