--- a/ChangeLog
+++ b/ChangeLog
@@ -1497,3 +1497,4 @@ openvix: developer 6.6.007.009
 openvix: release 6.6.007
 openvix: developer 6.6.007.010
 openvix: developer 6.6.007.011
+openvix: developer 6.6.007.012
