--- a/ChangeLog
+++ b/ChangeLog
@@ -1498,3 +1498,4 @@ openvix: release 6.6.007
 openvix: developer 6.6.007.010
 openvix: developer 6.6.007.011
 openvix: developer 6.6.007.012
+openvix: developer 6.6.007.013
