--- a/ChangeLog
+++ b/ChangeLog
@@ -1499,3 +1499,4 @@ openvix: developer 6.6.007.010
 openvix: developer 6.6.007.011
 openvix: developer 6.6.007.012
 openvix: developer 6.6.007.013
+openvix: developer 6.6.007.014
