--- a/ChangeLog
+++ b/ChangeLog
@@ -1501,3 +1501,4 @@ openvix: developer 6.6.007.012
 openvix: developer 6.6.007.013
 openvix: developer 6.6.007.014
 openvix: developer 6.6.007.015
+openvix: developer 6.6.007.016
