--- a/ChangeLog
+++ b/ChangeLog
@@ -1502,3 +1502,4 @@ openvix: developer 6.6.007.013
 openvix: developer 6.6.007.014
 openvix: developer 6.6.007.015
 openvix: developer 6.6.007.016
+openvix: developer 6.6.007.017
