--- a/ChangeLog
+++ b/ChangeLog
@@ -1503,3 +1503,4 @@ openvix: developer 6.6.007.014
 openvix: developer 6.6.007.015
 openvix: developer 6.6.007.016
 openvix: developer 6.6.007.017
+openvix: developer 6.6.007.018
