--- a/ChangeLog
+++ b/ChangeLog
@@ -1506,3 +1506,4 @@ openvix: developer 6.6.007.017
 openvix: developer 6.6.007.018
 openvix: developer 6.6.007.019
 openvix: developer 6.6.007.020
+openvix: developer 6.6.007.021
