--- a/ChangeLog
+++ b/ChangeLog
@@ -1507,3 +1507,4 @@ openvix: developer 6.6.007.018
 openvix: developer 6.6.007.019
 openvix: developer 6.6.007.020
 openvix: developer 6.6.007.021
+openvix: developer 6.6.007.022
