--- a/ChangeLog
+++ b/ChangeLog
@@ -1508,3 +1508,4 @@ openvix: developer 6.6.007.019
 openvix: developer 6.6.007.020
 openvix: developer 6.6.007.021
 openvix: developer 6.6.007.022
+openvix: release 6.6.007
