--- a/ChangeLog
+++ b/ChangeLog
@@ -1509,3 +1509,4 @@ openvix: developer 6.6.007.020
 openvix: developer 6.6.007.021
 openvix: developer 6.6.007.022
 openvix: release 6.6.007
+openvix: developer 6.6.008.001
