--- a/ChangeLog
+++ b/ChangeLog
@@ -1510,3 +1510,4 @@ openvix: developer 6.6.007.021
 openvix: developer 6.6.007.022
 openvix: release 6.6.007
 openvix: developer 6.6.008.001
+openvix: release 6.6.008
