--- a/ChangeLog
+++ b/ChangeLog
@@ -1511,3 +1511,4 @@ openvix: developer 6.6.007.022
 openvix: release 6.6.007
 openvix: developer 6.6.008.001
 openvix: release 6.6.008
+openvix: developer 6.6.009.001
