--- a/ChangeLog
+++ b/ChangeLog
@@ -1512,3 +1512,4 @@ openvix: release 6.6.007
 openvix: developer 6.6.008.001
 openvix: release 6.6.008
 openvix: developer 6.6.009.001
+openvix: developer 6.6.009.002
