--- a/ChangeLog
+++ b/ChangeLog
@@ -1513,3 +1513,4 @@ openvix: developer 6.6.008.001
 openvix: release 6.6.008
 openvix: developer 6.6.009.001
 openvix: developer 6.6.009.002
+openvix: developer 6.6.009.003
