--- a/ChangeLog
+++ b/ChangeLog
@@ -1514,3 +1514,4 @@ openvix: release 6.6.008
 openvix: developer 6.6.009.001
 openvix: developer 6.6.009.002
 openvix: developer 6.6.009.003
+openvix: release 6.6.009
