--- a/ChangeLog
+++ b/ChangeLog
@@ -1515,3 +1515,4 @@ openvix: developer 6.6.009.001
 openvix: developer 6.6.009.002
 openvix: developer 6.6.009.003
 openvix: release 6.6.009
+openvix: developer 6.6.009.004
