--- a/ChangeLog
+++ b/ChangeLog
@@ -1516,3 +1516,4 @@ openvix: developer 6.6.009.002
 openvix: developer 6.6.009.003
 openvix: release 6.6.009
 openvix: developer 6.6.009.004
+openvix: developer 6.6.009.005
