--- a/ChangeLog
+++ b/ChangeLog
@@ -1517,3 +1517,4 @@ openvix: developer 6.6.009.003
 openvix: release 6.6.009
 openvix: developer 6.6.009.004
 openvix: developer 6.6.009.005
+openvix: developer 6.6.010.001
