--- a/ChangeLog
+++ b/ChangeLog
@@ -1518,3 +1518,4 @@ openvix: release 6.6.009
 openvix: developer 6.6.009.004
 openvix: developer 6.6.009.005
 openvix: developer 6.6.010.001
+openvix: release 6.6.010
