--- a/ChangeLog
+++ b/ChangeLog
@@ -1519,3 +1519,4 @@ openvix: developer 6.6.009.004
 openvix: developer 6.6.009.005
 openvix: developer 6.6.010.001
 openvix: release 6.6.010
+openvix: developer 6.6.011.001
