--- a/ChangeLog
+++ b/ChangeLog
@@ -1520,3 +1520,4 @@ openvix: developer 6.6.009.005
 openvix: developer 6.6.010.001
 openvix: release 6.6.010
 openvix: developer 6.6.011.001
+openvix: developer 6.6.011.002
