--- a/ChangeLog
+++ b/ChangeLog
@@ -1524,3 +1524,4 @@ openvix: developer 6.6.011.002
 openvix: developer 6.6.011.003
 openvix: developer 6.6.011.004
 openvix: developer 6.6.011.005
+openvix: developer 6.6.011.006
