--- a/ChangeLog
+++ b/ChangeLog
@@ -1530,3 +1530,4 @@ openvix: release 6.6.011
 openvix: developer 6.6.012.001
 openvix: developer 6.6.012.002
 openvix: release 6.6.012
+openvix: developer 6.6.013.001
