--- a/ChangeLog
+++ b/ChangeLog
@@ -1533,3 +1533,4 @@ openvix: release 6.6.012
 openvix: developer 6.6.013.001
 openvix: developer 6.6.013.002
 openvix: developer 6.6.013.003
+openvix: release 6.6.013
