--- a/ChangeLog
+++ b/ChangeLog
@@ -1540,3 +1540,4 @@ openvix: developer 6.7.000.003
 openvix: developer 6.7.000.004
 openvix: developer 6.7.000.005
 openvix: developer 6.7.000.006
+openvix: developer 6.7.000.007
