--- a/ChangeLog
+++ b/ChangeLog
@@ -1546,3 +1546,4 @@ openvix: developer 6.7.000.009
 openvix: developer 6.7.000.010
 openvix: release 6.7.000
 openvix: developer 6.7.001.001
+openvix: release 6.7.001
