--- a/ChangeLog
+++ b/ChangeLog
@@ -1559,3 +1559,4 @@ openvix: release 6.7.004
 openvix: developer 6.7.005.001
 openvix: developer 6.7.005.002
 openvix: release 6.7.005
+openvix: developer 6.7.006.001
