--- a/ChangeLog
+++ b/ChangeLog
@@ -1566,3 +1566,4 @@ openvix: developer 6.7.006.004
 openvix: release 6.7.006
 openvix: developer 6.7.007.001
 openvix: release 6.7.007
+openvix: developer 6.7.008.001
