--- a/ChangeLog
+++ b/ChangeLog
@@ -1577,3 +1577,4 @@ openvix: developer 6.7.009.002
 openvix: developer 6.7.009.003
 openvix: developer 6.7.009.004
 openvix: developer 6.7.009.005
+openvix: developer 6.7.009.006
