--- a/ChangeLog
+++ b/ChangeLog
@@ -1578,3 +1578,4 @@ openvix: developer 6.7.009.003
 openvix: developer 6.7.009.004
 openvix: developer 6.7.009.005
 openvix: developer 6.7.009.006
+openvix: developer 6.7.009.007
