--- a/ChangeLog
+++ b/ChangeLog
@@ -1585,3 +1585,4 @@ openvix: developer 6.7.010.002
 openvix: developer 6.7.010.003
 openvix: developer 6.7.010.004
 openvix: developer 6.7.010.005
+openvix: developer 6.7.010.006
