--- a/ChangeLog
+++ b/ChangeLog
@@ -1586,3 +1586,4 @@ openvix: developer 6.7.010.003
 openvix: developer 6.7.010.004
 openvix: developer 6.7.010.005
 openvix: developer 6.7.010.006
+openvix: developer 6.7.010.007
