--- a/ChangeLog
+++ b/ChangeLog
@@ -1590,3 +1590,4 @@ openvix: developer 6.7.010.007
 openvix: developer 6.7.010.008
 openvix: developer 6.7.010.009
 openvix: developer 6.7.010.010
+openvix: developer 6.7.010.011
