--- a/ChangeLog
+++ b/ChangeLog
@@ -1592,3 +1592,4 @@ openvix: developer 6.7.010.009
 openvix: developer 6.7.010.010
 openvix: developer 6.7.010.011
 openvix: release 6.7.010
+openvix: developer 6.7.011.001
