--- a/ChangeLog
+++ b/ChangeLog
@@ -1593,3 +1593,4 @@ openvix: developer 6.7.010.010
 openvix: developer 6.7.010.011
 openvix: release 6.7.010
 openvix: developer 6.7.011.001
+openvix: developer 6.7.011.002
