--- a/ChangeLog
+++ b/ChangeLog
@@ -1595,3 +1595,4 @@ openvix: release 6.7.010
 openvix: developer 6.7.011.001
 openvix: developer 6.7.011.002
 openvix: release 6.7.011
+openvix: developer 6.7.011.003
