--- a/ChangeLog
+++ b/ChangeLog
@@ -1603,3 +1603,4 @@ openvix: developer 6.7.013.002
 openvix: developer 6.7.013.003
 openvix: developer 6.7.013.004
 openvix: developer 6.7.013.005
+openvix: developer 6.7.013.006
