--- a/ChangeLog
+++ b/ChangeLog
@@ -1612,3 +1612,4 @@ openvix: developer 6.7.014.004
 openvix: developer 6.7.014.005
 openvix: developer 6.7.014.006
 openvix: release 6.7.014
+openvix: developer 6.7.015.001
