--- a/ChangeLog
+++ b/ChangeLog
@@ -1613,3 +1613,4 @@ openvix: developer 6.7.014.005
 openvix: developer 6.7.014.006
 openvix: release 6.7.014
 openvix: developer 6.7.015.001
+openvix: release 6.7.015
