--- a/ChangeLog
+++ b/ChangeLog
@@ -1614,3 +1614,4 @@ openvix: developer 6.7.014.006
 openvix: release 6.7.014
 openvix: developer 6.7.015.001
 openvix: release 6.7.015
+openvix: developer 6.7.016.001
