--- a/ChangeLog
+++ b/ChangeLog
@@ -1615,3 +1615,4 @@ openvix: release 6.7.014
 openvix: developer 6.7.015.001
 openvix: release 6.7.015
 openvix: developer 6.7.016.001
+openvix: developer 6.7.016.002
