--- a/ChangeLog
+++ b/ChangeLog
@@ -1620,3 +1620,4 @@ openvix: developer 6.7.016.003
 openvix: developer 6.7.016.004
 openvix: developer 6.7.016.005
 openvix: developer 6.7.016.006
+openvix: developer 6.7.016.007
