--- a/ChangeLog
+++ b/ChangeLog
@@ -1621,3 +1621,4 @@ openvix: developer 6.7.016.004
 openvix: developer 6.7.016.005
 openvix: developer 6.7.016.006
 openvix: developer 6.7.016.007
+openvix: release 6.7.016
