--- a/ChangeLog
+++ b/ChangeLog
@@ -1625,3 +1625,4 @@ openvix: release 6.7.016
 openvix: developer 6.7.017.001
 openvix: release 6.7.017
 openvix: developer 6.7.018.001
+openvix: developer 6.7.018.002
