--- a/ChangeLog
+++ b/ChangeLog
@@ -1630,3 +1630,4 @@ openvix: developer 6.7.018.003
 openvix: developer 6.7.018.004
 openvix: developer 6.7.018.005
 openvix: developer 6.7.018.006
+openvix: release 6.7.018
