--- a/ChangeLog
+++ b/ChangeLog
@@ -1636,3 +1636,4 @@ openvix: release 6.7.019
 openvix: developer 6.7.020.001
 openvix: developer 6.7.020.002
 openvix: developer 6.7.020.003
+openvix: release 6.7.020
