--- a/ChangeLog
+++ b/ChangeLog
@@ -1645,3 +1645,4 @@ openvix: developer 6.8.001.005
 openvix: developer 6.8.001.006
 openvix: release 6.8.001
 openvix: developer 6.8.001.007
+openvix: developer 6.8.001.008
