--- a/ChangeLog
+++ b/ChangeLog
@@ -1646,3 +1646,4 @@ openvix: developer 6.8.001.006
 openvix: release 6.8.001
 openvix: developer 6.8.001.007
 openvix: developer 6.8.001.008
+openvix: release 6.8.001
