--- a/ChangeLog
+++ b/ChangeLog
@@ -1651,3 +1651,4 @@ openvix: developer 6.8.002.001
 openvix: developer 6.8.002.002
 openvix: developer 6.8.002.003
 openvix: developer 6.8.002.004
+openvix: release 6.8.002
