--- a/ChangeLog
+++ b/ChangeLog
@@ -1654,3 +1654,4 @@ openvix: developer 6.8.002.004
 openvix: release 6.8.002
 openvix: developer 6.8.002.005
 openvix: developer 6.8.002.006
+openvix: developer 6.8.002.007
